castai/add-castai-removal-disabled/.chainsaw-test/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: add-castai-removal-disabled
status:
  ready: true
